<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:title="@string/title_genre_selection"
        app:titleCentered="true" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sorting_order_text_input_layout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/sorting_order_hint_genre_selection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <AutoCompleteTextView
            android:id="@+id/auto_complete_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:labelFor="@id/sorting_order_text_input_layout"
            app:simpleItems="@array/simple_items" />

    </com.google.android.material.textfield.TextInputLayout>

    <include
        android:id="@+id/error_layout"
        layout="@layout/error_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/continue_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sorting_order_text_input_layout" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/continue_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sorting_order_text_input_layout">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:shimmer_auto_start="true"
                app:shimmer_base_alpha="0.5"
                app:shimmer_highlight_alpha="0.9">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/shimmer_chip_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
            </com.facebook.shimmer.ShimmerFrameLayout>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/genre_chip_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </FrameLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/continue_button"
        style="Widget.Material3.Button.ContainedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/continue_button_genre_selection"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
